tests/codegen/fail/interface/struct/derive_no_fields.stderr
error: GraphQL interface must have at least one field
       · note: https://spec.graphql.org/October2021#sec-Interfaces

 --> fail/interface/struct/derive_no_fields.rs:4:1
  |
4 | struct Character {}
  | ^^^^^^
